1.0.0 -> 1.0.1

- Improved memory views (resolved #11)
- Fixed preloader centering
- Fixed program being editable during simulation (resolved #12)


0.2.2 -> 1.0.0

- Added instruction code in memory
- Added instruction list (documentation)
- Added instruction/RO memory protection against overwriting
- Removed the legacy source parser
- Improved readability in memory views
- Improved tabulation insertion/deletion
- Improved settings UI
- Fixed memory edition in GUI
- Fixed CPSR/SPSR being usable as common registers
- Fixed broken shift argument (with register)
- Fixed broken shift highlighting/autocompletion
- Fixed incorrect pre-/post-indexing behaviour, syntax and highlighting
- Fixed incorrect syntax of 'label' arguments
- Fixed incorrect instruction memory position when fetching from StateInitializer (instruction comparison)
- Fixed LDM and STM default update mode
- Fixed instruction modifier order (data mode, store mode, update flags etc)
- Fixed MOV behaviour
- Fixed shift on immediate highlighting
- Fixed line number highlighting when looping over 2 addresses
- Fixed stuck UI when executing with minimum simulation interval
- Fixed undetected catch point by BX instruction
- Fixed value update highlighting
- Fixed unsaved dialog triggering
- Fixed CMN wrongly transformed into CMP
- Fixed autocompletion triggered when using Find & Replace
- Fixed shifted MOV to SHIFT conversion
- Fixed RegisterAddress highlighting


0.2.1 -> 0.2.2

- Added switch for Real Time Parser (color highlighting) and Auto-completion in settings
- Fixed autocompletion popup background transparency
- Fixed bug that prevented the window from being maximized on certain configurations
- Fixed autocompletion compatibility with find & replace
- Fixed a bug that flagged a file as 'modified' when just opened
- Fixed a bug that prevented from using find & replace after simulation


0.2.0 -> 0.2.1

- Added "Add breakpoint" context option
- Added Find & Replace menu in code editor